@@ -124,7 +124,7 @@ namespace lsp
                 ssize_t                         nCurrIndex;
                 ssize_t                         nLastIndex;
                 size_t                          nKeyScroll;     // Key scroll direction
-                item_t                         *pHoverItem;     // Hover item
+                ListBoxItem                    *pHoverItem;     // Hover item
 
                 Timer                           sKeyTimer;      // Key scroll timer
                 ScrollBar                       sHBar;
@@ -227,6 +227,8 @@ namespace lsp
                 virtual status_t            remove_all();
 
                 virtual void                render(ws::ISurface *s, const ws::rectangle_t *area, bool force);
+
+                virtual void                scroll_to_current();
 
                 virtual status_t            on_mouse_down(const ws::event_t *e);
                 virtual status_t            on_mouse_up(const ws::event_t *e);
